# taco

./: README.md  pyproject.toml
src/taco/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py  test_integration.py
