[project]
name = "taco"
version = "0.1.0"
description = "uv notebook bootstrapper — register per-project Jupyter kernels in one command"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13",
]

[project.scripts]
taco = "taco.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taco"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "marimo>=0.22.4",
    "pytest>=8",
]

[tool.pytest.ini_options]
markers = [
    "integration: full end-to-end tests requiring uv and a real project",
]
